fix: 修正主子直接关联字段为空问题
(cherry picked from commit 1c4bb8df72594376a46b9d93a3b3a88e2c5908cc)